--- a/templates/result.html
+++ b/templates/result.html
@@ -8,10 +8,11 @@
 </head>
 
 <body>
+    <center>
 
     <div class="container">
         <form action="{{ url_for('predict')}}" method="post">
-            <h1 style="font-size:40px;color:rgb(151, 35, 151);"> Prediction Result</h1> 
+            <h1 style="font-size:40px;color:rgb(226, 81, 24);"> Prediction Result</h1> 
         <br><br>
         
         <!-- Result -->
@@ -23,9 +24,13 @@
 				<h1><span class='safe'>🤩 Congratulation! 🤩<br><br>You DON'T have LIVER DISEASE.</span></h1>
 				
 			{% endif %}
+    
         </form>
-	</div>
-        
+    </div>
+    </center>
+	
+    </body>
+    </html>
 
     
     
