--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Liver Prediction </title>
+    <title>Liver Disease Prediction </title>
     <link rel="stylesheet" href="../static/styles/style.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
     </div>
 
     <div class="ml-container">
-        <form action="{{ url_for('predict') }}" method="POST">
+        <form action="{{url_for('predict')}}" method="POST">
             <h3 style="color:rgb(14, 10, 14);">Age</h3>
             <input id="first" name="Age" placeholder="in Year" required="required">
             <br>
