--- a/templates/result.html
+++ b/templates/result.html
@@ -11,7 +11,7 @@
     <center>
 
     <div class="container">
-        <form action="{{ url_for('predict')}}" method="post">
+        <form action="{{ url_for('prediction')}}" method="post">
             <h1 style="font-size:40px;color:rgb(226, 81, 24);"> Prediction Result</h1> 
         <br><br>
         
